# jaguar

./: .gitignore  Makefile  TODO  accuracy_test.sh  default.quantizer  lloyd_max.cpp  performance.sh  safety_test.sh  sequence_generator.cpp  setup.sh  test-training.sh  test-transmission.sh  test.sh  test_image.pgm  test_image_p2.pgm
DONOTDELETE/: complex_training.cu  complex_training.cuh  cosq.cpp  cosq.cuh
benchmarks/cc/: CMakeLists.txt  cosq  cosq.cuh  cuda_cosq.cu  jaguar.cpp  openmp_cosq.cpp  test.sh  test_cuda.sh
benchmarks/dist_br_sm/: cosq.cuh  jaguar.cu
benchmarks/distortion/: cosq.cuh  jaguar.cu
benchmarks/nnc/: cosq.cuh  jaguar.cu  test.sh
benchmarks/nnc_56/: cosq.cuh  jaguar.cu
benchmarks/nnc_br_sm/: cosq.cuh  jaguar.cu
benchmarks/nnc_lt5/: Makefile  cosq.cuh  jaguar.cu
docs/: README.md  future_work.md  getting_started.md  testing.md
sequential/: cosq  cosq.cpp  profile.sh  run.sh
src/: CMakeLists.txt  cosq.cu  cosq.h  ext.cu  ext.h  jaguar.c  jaguar.cpp  jaguar.cu  logger.c  logger.h  test.cu
src/cuda/: bit_allocations.h  cc.cuh  common.h  cosq.cuh  cuda_util.c  cuda_util.h  dct.cuh  dist.cuh  nnc.cuh  nvidia.cuh  quantize.cuh  variance.cuh
src/math/: distributions.h
src/resources/: banner.txt
src/test/: CMakeLists.txt  test_cosq.cu  test_cosq.h  test_jaguar.cpp
src/training/: simple_training.cu  simple_training.cuh  training.cu  training.cuh
src/transmission/: transmission.cu  transmission.cuh
src/util/: cuda_util.c  cuda_util.cpp  cuda_util.h  cuda_util.hpp  logger.cpp  logger.h  logger.hpp  pgm_util.c  pgm_util.cpp  pgm_util.h  pgm_util.hpp
test_kernels/: README.md
tests/: br1.txt  br2.txt  br3.txt  br4.txt  br5.txt  br6.txt  br7.txt  br8.txt
(+83 files in other folders)
